--- a/homeassistant/smarttherm/smarttherm.yaml
+++ b/homeassistant/smarttherm/smarttherm.yaml
@@ -150,8 +150,10 @@ sensor:
     filters:
       # measure voltage and adjust for your device
       - calibrate_linear:
-          - 1 -> 0.25 # ~8v min
-          - 100.0 -> 0.62 # ~15v max
+          #- 1 -> 0.25 # ~8v min
+          - 1 -> 0.20 # ~8v min
+          - 100.0 -> 0.70 # ~15v max
+          # Original:- 100.0 -> 0.70 # ~15v max
     on_value:
       then:
         - logger.log:
