Added Zweipunktregelung für Therme and draft for Stepper.

--- a/homeassistant/smarttherm/smarttherm_stetigregelung.yaml
+++ b/homeassistant/smarttherm/smarttherm_stetigregelung.yaml
@@ -42,6 +42,34 @@ ota:
 
 captive_portal:
 
+# 1-Wire Bus für Dallas Sensoren auf GPIO0
+one_wire:
+  - platform: gpio
+    pin:
+      number: GPIO0
+      mode: INPUT
+
+sensor:
+  - platform: dallas_temp
+    address: 0x74106f7c0a646128
+    name: "dallas_vorlauf"
+    update_interval: 10s
+    unit_of_measurement: "°C"
+    icon: "mdi:thermometer-plus"
+    device_class: "temperature"
+    state_class: "measurement"
+    accuracy_decimals: 2
+  - platform: dallas_temp
+    address: 0x6b5103710a646128
+    name: "dallas_ruecklauf"
+    update_interval: 10s
+    unit_of_measurement: "°C"
+    icon: "mdi:thermometer-minus"
+    device_class: "temperature"
+    state_class: "measurement"
+    accuracy_decimals: 2
+
+
 output:
   - platform: esp8266_pwm
     pin: #D8 # octocopler drive
@@ -114,31 +142,6 @@ number:
 
 
 
-one_wire:
-  - platform: gpio
-    pin:
-      number: GPIO0
-      mode: INPUT
-
-sensor:
-  - platform: dallas_temp
-    address: 0x74106f7c0a646128
-    name: "dallas_vorlauf"
-    update_interval: 10s
-    unit_of_measurement: "°C"
-    icon: "mdi:thermometer-plus"
-    device_class: "temperature"
-    state_class: "measurement"
-    accuracy_decimals: 2
-  - platform: dallas_temp
-    address: 0x6b5103710a646128
-    name: "dallas_ruecklauf"
-    update_interval: 10s
-    unit_of_measurement: "°C"
-    icon: "mdi:thermometer-minus"
-    device_class: "temperature"
-    state_class: "measurement"
-    accuracy_decimals: 2
 
   # map percent slider value to float level of pwm output
   # based on http://www.roter-unimog.de/p4/46-hzg-technik.htm
