--- a/homeassistant/smarttherm/smarttherm_zweipunkt_regelung.yaml
+++ b/homeassistant/smarttherm/smarttherm_zweipunkt_regelung.yaml
@@ -7,8 +7,8 @@ wifi:
     - ssid: !secret wifi_ssid
       password: !secret wifi_password
 
-    - ssid: !secret wifi_ssid_max
-      password: !secret wifi_password_max
+    #    - ssid: !secret wifi_ssid_max
+    #      password: !secret wifi_password_max
 
     - ssid: ${unit_name} Fallback Hotspot
       password: !secret fallback_password
@@ -24,7 +24,7 @@ esp8266:
 
 # Enable logging
 logger:
-
+  level: WARN        # statt DEBUG/INFO
 # Enable Home Assistant API
 api:
   encryption:
@@ -77,10 +77,13 @@ output:
 # Bang-Bang Climate Controller (Zweipunktregler)
 climate:
   - platform: bang_bang
-    name: "Heizungs Thermostat"
+    id: junkers_therme
+    name: "Junker Therme"
     sensor: junkers_vorlauf
-    default_target_temperature_low: 50.0°C
-    default_target_temperature_high: 60.0°C  # 1K Hysterese
+
+    default_target_temperature_low: 40 °C
+    default_target_temperature_high: 50 °C
+
     heat_action:
       - output.set_level:
           id: pwm_heizung
